fix(silverBox): remove overflow:hidden; property

--- a/public/src/css/silverBox.scss
+++ b/public/src/css/silverBox.scss
@@ -49,7 +49,6 @@ body {
 		padding: var(--silverBox-padding);
 		box-shadow: var(--silverBox-box-shadow);
 		background-color: var(--silverBox-background-color);
-		overflow: hidden;
 		// modal Animation
 		animation: popUp 0.3s linear;
 
